tests/paczka1/small_fuzzy/21783805.err
Error in line 4: eDb A947 46,0
Error in line 7: WifxIp5 S730 69,9
Error in line 5: eDb S730 88,2
Error in line 13: DuwoVhYYQ2M S636 60,1
Error in line 11: WifxIp5 S636 64,8
